# VideoTextGlimpse

./: .gitignore  README.md  TODO.txt  main.py  pyproject.toml
src/data/: Wirtual_DeepDip.csv  crops_dict.py
src/managers/: download_manager.py  file_manager.py  image_manager.py
src/utils/: download_utils.py  file_utils.py  image_utils.py  time_utils.py
