[tool.poetry]
name = "videotextglimpse"
version = "0.0.1"
description = ""
authors = ["Geismark <geismark@btinternet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
youtube-dl = "^2021.12.17"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
