[tool.poetry]
name = "videotextglimpse"
version = "0.0.1"
description = ""
authors = ["Geismark <geismark@btinternet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ffmpeg-python = "^0.2.0"
yt-dlp = "^2024.4.9"
pytube = "^15.0.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
